# book-tracker

./: .gitignore  Pipfile  README.md  alembic.ini  book.sql  book_tracker.py  book_tracker_init.py  config.py  db.py  install.sh  kill.sh  models.py  proxies.py  pyproject.toml  query.sh  requirements.txt  run.sh  scrape_page.py  scraper.py
alembic/: env.py
alembic/versions/: 81100731d54d_add_change_column_to_rank.py  b5f60837636a_add_indexes.py  b6e097dd31aa_baseline.py
book_tracker/: __init__.py  book_tracker.py  config.py  db.py  init.py  scrape_page.py
