[project]
name = "book-tracker"
version = "0.0.0"
description = "Track Amazon book sales rank over time"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests",
  "beautifulsoup4",
  "SQLAlchemy",
  "alembic",
  "requests-html",
  "lxml_html_clean",
  "sandman2",
  "playwright>=1.58.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
book-tracker = "book_tracker.book_tracker:main"
book-tracker-ui = "sandman2ctl:main"
book-tracker-init = "book_tracker.init:main"

[tool.uv]
# Keep default settings
package = true

[tool.uv.build-backend]
module-name = "book_tracker"
module-root = ""
